--- a/src/components/Pokemon/Pokemon.module.css
+++ b/src/components/Pokemon/Pokemon.module.css
@@ -5,3 +5,8 @@
   border: 1px solid rgb(221, 221, 221);
   box-shadow: 0 1px 4px rgb(226, 226, 226);
 }
+
+.Pokemon span {
+  margin: 5px;
+  font-size: 12px;
+}
