--- a/src/components/Pokemon/Pokemon.module.css
+++ b/src/components/Pokemon/Pokemon.module.css
@@ -4,9 +4,16 @@
   margin: 10px;
   border: 1px solid rgb(221, 221, 221);
   box-shadow: 0 1px 4px rgb(226, 226, 226);
+  caret-color: transparent;
 }
 
 .Pokemon span {
   margin: 5px;
   font-size: 12px;
+  caret-color: transparent;
+}
+
+.Pokemon span:hover {
+  background-color: brown;
+  color: aliceblue;
 }
