--- a/src/components/PokemonsList/PokemonsList.module.css
+++ b/src/components/PokemonsList/PokemonsList.module.css
@@ -4,6 +4,13 @@
 .PokemonsList {
   margin-top: 20px;
 }
+.Found {
+  height: 20px;
+  margin: 5px;
+}
+.Found p {
+  margin: 0px;
+}
 
 .Arr {
   display: grid;
